# firefox-profile-switcher-connector

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
.rpm/: ff-pswitch-connector.spec  manifest-linux.json
manifest/: manifest-mac.json  manifest-windows.json
src/: avatars.rs  config.rs  ipc.rs  main.rs  native_req.rs  native_resp.rs  options.rs  process.rs  profiles.rs  profiles_order.rs  storage.rs  versions.rs  windowing.rs
src/cmd/: add_avatars.rs  close_manager.rs  create_profile.rs  delete_avatar.rs  delete_profile.rs  get_avatar.rs  initialize.rs  launch_profile.rs  mod.rs  update_options.rs  update_profile.rs  update_profiles_order.rs
wix/: main.wxs
